--- a/pom.xml
+++ b/pom.xml
@@ -90,15 +90,22 @@
           <groupId>org.springframework</groupId>  
           <artifactId>spring-context</artifactId>  
           <version>${spring.version}</version>  
-    </dependency>      
+    </dependency>
+    <!-- spring-context-support jar 为spring集成ehcache -->      
     <dependency>  
         <groupId>org.springframework</groupId>  
         <artifactId>spring-context-support</artifactId>  
         <version>${spring.version}</version>   
-    </dependency>   
+    </dependency>
+	<dependency>
+	    <groupId>net.sf.ehcache</groupId>
+	    <artifactId>ehcache</artifactId>
+	    <version>2.9.0</version>
+	</dependency>
+	 <!-- 为spring集成ehcache -->     
     <dependency>  
           <groupId>org.springframework</groupId>  
-          <artifactId>spring-jdbc</artifactId>  
+          <artifactId>spring-jdbc</artifactId>   
           <version>${spring.version}</version>  
     </dependency>       
     <dependency>  
@@ -192,7 +199,25 @@
     	<artifactId>guava</artifactId>
     	<version>18.0</version>
     </dependency>
-  </dependencies>
+    <!-- spring data redis -->    
+     <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-redis</artifactId>
+        <version>1.7.4.RELEASE</version>
+     </dependency> 
+     <dependency>  
+        <groupId>redis.clients</groupId>  
+        <artifactId>jedis</artifactId>  
+        <version>2.8.0</version>  
+    </dependency> 
+     <!-- https://mvnrepository.com/artifact/commons-pool/commons-pool -->
+	 <dependency>
+	    <groupId>commons-pool</groupId>
+	    <artifactId>commons-pool</artifactId>
+	    <version>1.5</version>
+	 </dependency>
+     <!-- spring data redis -->  
+  </dependencies> 
   <build>
     <finalName>callcenter-test</finalName>
     <plugins>
